2004-10-18 Derek Price <derek@ximbiot.com>

	* cvs.h (DEVNULL): This is system dependant.  Move it to lib/system.h.
	* client.c (copy_a_file): Consolidate USE_VMS_FILENAMES stuff under a
	single #ifdef.

2004-10-15 Derek Price <derek@ximbiot.com>

	* cvs.h: Don't include vasnprintf.h.
	(Xasprintf): New prototype.
	* client.c, edit.c, history.c, import.c, ls.c, main.c, parseinfo.c,
	recurse.c, release.c, repos.c, root.c, server.c, status.c, subr.c,
	vers_ts.c: s/asnprintf/Xasprintf/.
	* root.c: Include vasnprintf.h.
	(primary_root_translate, primary_root_inverse_translate): Use
	asnprintf() properly.
	* subr.c: Include vasprintf.h.
	(Xasprintf): New function.

2004-10-14 Derek Price <derek@ximbiot.com>

	* import.c (import): Remove an unecessary level of nesting.  Simplify
	xmalloc/sprintf with asnprintf.  Remove useless comment.

2004-10-14 Derek Price <derek@ximbiot.com>

	* import.c (import): Verify branch specifications more thoroughly.
	* sanity.sh (importb): Adapt to new error message.
	(import-quirks): New test.

2004-10-14  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (server_pause_check, do_cvs_command, server_cleanup):
	Avoid typecasts.
	
2004-10-14  Derek Price  <derek@ximbiot.com>

	* gssapi-client.c: Use new size_t buffer APIs.

2004-10-11  Mark D. Baushke  <mdb@cvshome.org>

	* buffer.h, buffer.c (buf_output, buf_input_data, buf_read_line,
	buf_read_data, struct packetizing_buffer,
	packetizing_buffer_initialize) Use size_t instead of int.
	Silences warnings in buffer.c, server.c, and zlib.c on OpenBSD
	sparc64 where sizeof(int) is not the same as sizeof(size_t).
	* client.c (read_line_via, read_line, try_read_from_server,
	get_server_response, handle_ok, handle_error,
	handle_valid_requests, handle_checked_in, handle_new_entry,
	handle_checksum, handle_copy_file, handle_updated, handle_merged,
	handle_patched, handle_rcs_diff, handle_removed,
	handle_remove_entry, handle_set_static_directory,
	handle_clear_static_directory, handle_set_sticky,